5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1747_1535.log
== TEST (2019-05-16 10:10:11) 
-- CODE:
x = float(input("numero real:"))
k = int(input("termos da serie:"))

at 0
sx = 1
t = 0
e = 2

while( i < k):
	at = ((x**sx) / sx) * (-1)**e +at
	t = t + 1
	e = e + 1
	sx = sx + 2
print(round(at,6))
-- ERROR:
File "XXXX", line 4
    at 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:10:17) 
-- CODE:
x = float(input("numero real:"))
k = int(input("termos da serie:"))

at = 0
sx = 1
t = 0
e = 2

while( i < k):
	at = ((x**sx) / sx) * (-1)**e +at
	t = t + 1
	e = e + 1
	sx = sx + 2
print(round(at,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while( i < k):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:10:36) 
-- CODE:
x = float(input("numero real:"))
k = int(input("termos da serie:"))

at = 0
sx = 1
t = 0
e = 2

while( t < k):
	at = ((x**sx) / sx) * (-1)**e +at
	t = t + 1
	e = e + 1
	sx = sx + 2
print(round(at,6))
-- OUTPUT:
0.543552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:10:45) 
-- CODE:
x = float(input("numero real:"))
k = int(input("termos da serie:"))

at = 0
sx = 1
t = 0
e = 2

while( t < k):
	at = ((x**sx) / sx) * (-1)**e +at
	t = t + 1
	e = e + 1
	sx = sx + 2
print(round(at,6))
-- OUTPUT:
0.543552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:10:53) 
-- CODE:
x = float(input("numero real:"))
k = int(input("termos da serie:"))

at = 0
sx = 1
t = 0
e = 2

while( t < k):
	at = ((x**sx) / sx) * (-1)**e +at
	t = t + 1
	e = e + 1
	sx = sx + 2
print(round(at,6))
-- OUTPUT:
0.543552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:10:59) 
-- CODE:
x = float(input("numero real:"))
k = int(input("termos da serie:"))

at = 0
sx = 1
t = 0
e = 2

while( t < k):
	at = ((x**sx) / sx) * (-1)**e +at
	t = t + 1
	e = e + 1
	sx = sx + 2
print(round(at,6))
-- EXECUTION TIME:
0.167781
-- TEST CASE 1:
---- input:
0.6
3
---- correct output:
0.543552
---- user output:
0.543552
-- TEST CASE 2:
---- input:
0.25
3
---- correct output:
0.244987
---- user output:
0.244987
-- TEST CASE 3:
---- input:
0.35
4
---- correct output:
0.336667
---- user output:
0.336667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
